--------------------------------------------------------------------------------
Changes for 1.9.6

New features:
 - [ZBXNEXT-785] support of automatic selection of map icon element depending on element type (Vedmak,Eduard)
 - [ZBX-3683] removed the obsolete item zabbix[log] (Sasha)
 - [ZBXNEXT-891] redesign general->Value mapping (Eduard)
 - [ZBXNEXT-889] redesign general->Regular expressions (Eduard)
 - [ZBXNEXT-885] redesign general->Housekeeper, Working time and Other (Eduard)
 - [ZBXNEXT-871] redesign general->gui (Eduard)
 - [ZBX-1357] updated German, Japanese, Latvian, Polish, Russian, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)
 - [ZBXNEXT-863] renamed "host profile" to "host inventory" (dimir)

Bug fixes:
 - [ZBX-4049] fixed memory leak in configuration syncer (rudolfs)
 - [ZBX-4017] fixed host deletion using api (Vedmak)
 - [ZBX-4029,ZBX-4037] fixed inconsistent and untranslatable strings in frontend and clarified frontend messages (Richlv)
 - [ZBX-4010] fixed undefined constant SVC_SNMPv2 in discovery action conditions (Richlv)
 - [ZBX-3775] fixed html formatting in Overview (Eduard)
 - [ZBX-4001] fixed nearly duplicate strings, clarified error messages and removed obsolete translation strings (Richlv, sasha)
 - [ZBX-4004] fixed typos in function names (Richlv)
 - [ZBX-4002] fixed template name being reported as host name when incorrect characters were used (Richlv)

--------------------------------------------------------------------------------
Changes for 1.9.5

New features:
 - [ZBXNEXT-831] macros in interface IP addresses and DNS names are resolved in cache (rudolfs)
 - [ZBXNEXT-841] added "config" table to configuration cache, refresh_unsupported now is read from cache and synced with proxies (rudolfs)
 - [ZBXNEXT-807] implemented configuration cache for triggers (asaveljevs)
 - [ZBXNEXT-674] added host area functionality for maps (Aly, Vedmak)