@@ -54,4 +54,22 @@ function sdff($msg, $fileName = '/tmp/zabbix.log') {
 	@fclose($fileStreem);
 }
 
+function sdf(&$var) {
+	$value = $var;
+	$var = $new = null;
+	$varname = false;
+	foreach ($GLOBALS as $key => $val) {
+		if ($val === $new) $varname = $key;
+	}
+
+	echo '$'.$varname.'=';
+
+	if (is_array($value) || is_object($value)) {
+		echo '<pre>'.print_r($value, true).'</pre>';
+	}
+	else {
+		echo $value;
+	}
+	echo SBR;
+}
 ?>
