@@ -365,21 +365,9 @@
 	'S_SMTP_EMAIL'=>				_('SMTP email'),
 	'S_SCRIPT_NAME'=>				_('Script name'),
 	'S_DELETE_SELECTED_MEDIA'=>			_('Delete selected media?'),
-	'S_DELETE_SELECTED_IMAGE'=>			_('Delete selected image?'),
 	'S_MEDIA_TYPES'=>				_('Media types'),
 	'S_DEFAULT'=>					_('Default'),
 	'S_IMAGE'=>					_('Image'),
-	'S_IMAGES_BIG'=>				_('IMAGES'),
-	'S_ICON'=>					_('Icon'),
-	'S_NO_IMAGES_DEFINED'=>				_('No images defined.'),
-	'S_BACKGROUND'=>				_('Background'),
-	'S_UPLOAD'=>					_('Upload'),
-	'S_IMAGE_ADDED'=>				_('Image added'),
-	'S_CANNOT_ADD_IMAGE'=>				_('Cannot add image'),
-	'S_IMAGE_DELETED'=>				_('Image deleted'),
-	'S_CANNOT_DELETE_IMAGE'=>			_('Cannot delete image'),
-	'S_IMAGE_UPDATED'=>				_('Image updated'),
-	'S_CANNOT_UPDATE_IMAGE'=>			_('Cannot update image'),
 	'S_OTHER'=>					_('Other'),
 	'S_CREATE_MEDIA_TYPE'=>				_('Create media type'),
 	'S_NOTHING_TO_DO'=>				_('Nothing to do'),
@@ -1843,9 +1831,6 @@
 	'S_COULD_NOT_SAVE_IMAGE'=>		_('Could not save image!'),
 	'S_EXECUTE_SQL_ERROR'=>			_('Execute SQL error'),
 	'S_PARSE_SQL_ERROR'=>			_('Parse SQL error'),
-	'S_IMAGE_SIZE_MUST_BE_LESS_THAN_MB'=>	_('Image size must be less than 1MB'),
-	'S_SELECT_IMAGE_TO_DOWNLOAD'=>		_('Select image to download'),
-	'S_INCORRECT_IMAGE'=>			_('Incorrect Image'),
 
 //	nodes.inc.php
 	'S_INCORRECT_CHARACTERS_USED_FOR_NODE_NAME'=>		_('Incorrect characters used for Node name'),
